implemented rvars functions, implemented metad_draws for extracting model parameters, cleaned up code style

--- a/vignettes/alternative_distributions.Rmd
+++ b/vignettes/alternative_distributions.Rmd
@@ -11,8 +11,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  dpi = 150, fig.width=8, fig.height=6, 
-  fig.align='center', out.width = "75%"
+  dpi = 150, fig.width = 8, fig.height = 6,
+  fig.align = "center", out.width = "75%"
 )
 ```
 
@@ -76,7 +76,7 @@ To simulate data, you can call the `sim_metad` function supplying the optional a
 d <- sim_metad(
   N_trials = 10000, dprime = 1.5, c = .1, log_M = -.5,
   c2_0_diff = c(.25, .5, .25), c2_1_diff = c(.1, .5, .25),
-  lcdf=gumbel_min_lcdf, lccdf=gumbel_min_lccdf
+  lcdf = gumbel_min_lcdf, lccdf = gumbel_min_lccdf
 )
 ```
 
@@ -127,7 +127,7 @@ tibble(.row = 1) |>
   geom_abline(slope = 1, intercept = 0, linetype = "dashed") +
   geom_errorbar(orientation = "y", width = .01) +
   geom_errorbar(orientation = "x", width = .01) +
-  geom_point() +  
+  geom_point() +
   geom_line() +
   coord_fixed(xlim = 0:1, ylim = 0:1, expand = FALSE) +
   xlab("P(False Alarm)") +
