--- a/vignettes/parameterization.Rmd
+++ b/vignettes/parameterization.Rmd
@@ -11,8 +11,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  dpi = 150, fig.width=8, fig.height=6, 
-  fig.align='center', out.width = "75%"
+  dpi = 150, fig.width = 8, fig.height = 6,
+  fig.align = "center", out.width = "75%"
 )
 ```
 
